--- a/demo/index.html
+++ b/demo/index.html
@@ -19,6 +19,7 @@
         <a href="https://waveform.prototyping.bbc.co.uk/">here</a>.
       </p>
 
+
       <h2>Demo pages</h2>
       <p>
         The following pages demonstrate various configuration options:
@@ -49,7 +50,7 @@
 
     <div id="demo-controls">
       <audio id="audio" controls="controls">
-        <source src="/TOL_6min_720p_download.mp3" type="audio/mpeg">
+        <source src="/Test3.wav" type="audio/wav">
         <source src="/TOL_6min_720p_download.ogg" type="audio/ogg">
         Your browser does not support the audio element.
       </audio>
