fiixed length problem

--- a/demo/index.html
+++ b/demo/index.html
@@ -50,7 +50,7 @@
 
     <div id="demo-controls">
       <audio id="audio" controls="controls">
-        <source src="/Test3.wav" type="audio/wav">
+        <source src="/mdr_aktuell16k.wav" type="audio/wav">
         <source src="/TOL_6min_720p_download.ogg" type="audio/ogg">
         Your browser does not support the audio element.
       </audio>
